k8s/apps/monitoring/alertmanager/alertmanager_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: monitoring
    meta.helm.sh/release-namespace: monitoring
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 78.3.2
    chart: kube-prometheus-stack-78.3.2
    heritage: Helm
    release: monitoring
    self-monitor: "true"
  name: monitoring-kube-prometheus-alertmanager
  namespace: monitoring
spec:
  clusterIP: 10.101.97.141
  clusterIPs:
  - 10.101.97.141
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 9093
  - appProtocol: http
    name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    alertmanager: monitoring-kube-prometheus-alertmanager
    app.kubernetes.io/name: alertmanager
